# FaceTrain

./: CMakeLists.txt  main.cpp
samples/: bg.data  zhang.data  zhang.vec
samples/1、环境搭建与模型训练/代码/: CMakeLists.txt  main.cpp
samples/data/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml
